Bug 613748 - Keyboard inputs do not work when tab-modal alerts are open in another tab. r=smaug, a=drivers for API change